--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="button-portfolio">
         <div class="container-button">
           <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="portfolio list">
@@ -73,7 +73,7 @@
           </ul>
         </div>
         <div class="container-portfolio">
-          <ul class="work list">
+          <ul class="work-portfolio list">
             <li class="item">
               <article class="card">
                 <a href="">
@@ -83,7 +83,8 @@
                       alt="Технокряк"
                       width="370"
                       height="294"
-                      class="work-link"
+                      background: url(portfolio1.jpg);
+                      class="work-link img"
                     />
                   </div>
                   <div class="card-content">
