--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,8 @@
         <ul class="site-contakt list">
           <li class="item">
             <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="link"
-              >м. Київ, пр-т Лесі Українки, 26</a
+              href="mailto:info@devstudio.com"
+             class="link">info@devstudio.com</a
             >
           </li>
           <li class="item">
