--- a/index.html
+++ b/index.html
@@ -37,11 +37,8 @@
         <ul class="site-contakt list">
           <li class="item">
             <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="link"
-              >м. Київ, пр-т Лесі Українки, 26</a
+              href="mailto:info@devstudio.com"
+             class="link">info@devstudio.com</a
             >
           </li>
           <li class="item">
@@ -136,8 +133,10 @@
                 width="270"
                 height="260"
               />
+              <div class="team-content">
               <h3 class="team-title">Ігор Дем'яненко</h3>
               <p class="team-text">Product Designer</p>
+            </div>
             </li>
             <li class="item">
               <img class="card"
@@ -146,8 +145,10 @@
                 width="270"
                 height="260"
               />
+              <div class="team-content">
               <h3 class="team-title">Ольга Рєпіна</h3>
               <p class="team-text">Frontend Developer</p>
+            </div>
             </li>
             <li class="item">
               <img class="card"
@@ -156,8 +157,10 @@
                 width="270"
                 height="260"
               />
+              <div class="team-content">
               <h3 class="team-title">Микола Тарасов</h3>
               <p class="team-text">Marketing</p>
+            </div>
             </li>
             <li class="item">
               <img class="card"
@@ -166,8 +169,10 @@
                 width="270"
                 height="260"
               />
+              <div class="team-content">
               <h3 class="team-title">Михайло Єрмаков</h3>
               <p class="team-text">UI Designer</p>
+            </div>
             </li>
           </ul>
           </div>
